<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mturtle_teleop_key</name>
  <version>0.0.0</version>
  <description>turtle_teleop_key for mturtlesim</description>
  <maintainer email="tanaka@hal.ipc.i.u-tokyo.ac.jp">Haruaki Tanaka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
